[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu/Credits.gd" type="Script" id=2]
[ext_resource path="res://Assets/menu.png" type="Texture" id=3]
[ext_resource path="res://Assets/theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/all player animations.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 13, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 13, 0, 13, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[node name="Credits" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 375.0
rect_scale = Vector2( 0.374673, 0.375123 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.615686, 0.615686, 0.615686, 1 )
position = Vector2( 52, 163 )
scale = Vector2( 4, 4 )
frames = SubResource( 6 )
playing = true

[node name="GitHub" type="LinkButton" parent="."]
margin_left = 171.0
margin_top = 12.0
margin_right = 222.0
margin_bottom = 33.0
theme = ExtResource( 4 )
text = "GitHub"

[node name="Camellia" type="LinkButton" parent="."]
margin_left = 210.0
margin_top = 46.0
margin_right = 282.0
margin_bottom = 66.0
focus_mode = 2
theme = ExtResource( 4 )
text = "Camellia"

[node name="Kenney" type="LinkButton" parent="."]
margin_left = 211.0
margin_top = 87.0
margin_right = 283.0
margin_bottom = 107.0
focus_mode = 2
theme = ExtResource( 4 )
text = "Kenney"

[node name="Gameochka" type="RichTextLabel" parent="."]
margin_left = 305.0
margin_top = 1.0
margin_right = 383.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Igrochka"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 26.0
margin_right = 205.0
margin_bottom = 112.0
theme = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]
Gamedesign, art, music:
Programming:
Assets:"
text = "
Gamedesign, art, music:
Programming:
Assets:"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 688.0
margin_top = 160.0
margin_right = 824.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( -48, 48 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_text = ", och"
text = ", och"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 210.0
margin_top = 67.0
margin_right = 255.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( -48, 48 )
theme = ExtResource( 4 )
bbcode_text = "och"
text = "och"

[node name="Menu" type="Button" parent="."]
margin_left = 157.0
margin_top = 148.0
margin_right = 277.0
margin_bottom = 178.0
theme = ExtResource( 4 )
text = "Menu"

[connection signal="pressed" from="GitHub" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Camellia" to="." method="_on_Camellia_pressed"]
[connection signal="pressed" from="Kenney" to="." method="_on_Kenney_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
